# jpegli

./: .bazelignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  BUILD.bazel  BUILDING_OSX.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  MODULE.bazel  README.md  bash_test.sh  ci.sh  deps.sh  flake.nix
doc/: CMakeLists.txt  api.txt  benchmarking.md  building_and_testing.md  building_wasm.md  debugging_workflows.md  developing_in_debian.md  developing_in_github.md  developing_in_windows_msys.md  developing_in_windows_vcpkg.md  developing_with_crossroad.md  fuzzing.md  release.md  vuln_playbook.md
doc/man/: cjpegli.txt  djpegli.txt
doc/sphinx/: conf.py
lib/: BUILD  CMakeLists.txt  gbench_main.cc  jpegli.cmake  jpegli_cms.cmake  jpegli_extras.cmake  jpegli_lists.bzl  jpegli_lists.cmake  jpegli_tests.cmake  jpegli_threads.cmake  jpegli_vars.bzl  jxl.cmake  jxl_benchmark.cmake  jxl_cms.cmake  jxl_extras.cmake  jxl_lists.bzl  jxl_lists.cmake  jxl_tests.cmake  jxl_threads.cmake  jxl_vars.bzl  lib.gni  nothing.cc
lib/base/: arch_macros.h  bits.h  byte_order.h  c_callback_support.h  common.h  compiler_specific.h  data_parallel.h  exif.h  fast_math-inl.h  float.h  iaca.h  include_jpeglib.h  matrix_ops.h  memory_manager.h  os_macros.h  override.h  parallel_runner.h  printf_macros.h  random.h  rational_polynomial-inl.h  rect.h  sanitizer_definitions.h  sanitizers.h  scope_guard.h  span.h  status.h  testing.h  types.h
lib/cms/: cms.h  cms_interface.h  color_encoding.h  color_encoding_cms.h  color_encoding_internal.cc  color_encoding_internal.h  jpegli_cms.cc  jpegli_cms_internal.h  jxl_cms.cc  jxl_cms_internal.h  libjpegli_cms.pc.in  libjxl_cms.pc.in  opsin_params.h  tone_mapping-inl.h  tone_mapping.h  tone_mapping_test.cc  transfer_functions-inl.h  transfer_functions.h  transfer_functions_test.cc
lib/extras/: README.md  alpha_blend.cc  alpha_blend.h  butteraugli.cc  butteraugli.h  butteraugli_test.cc  cache_aligned.cc  cache_aligned.h  codec.cc  codec.h  codec_test.cc  codestream_header.h  common.cc  common.h  convolve-inl.h  convolve.h  convolve_separable5.cc  convolve_slow.cc  exif.cc  exif.h  hlg.cc  hlg.h  image.cc  image.h  image_color_transform.cc  image_color_transform.h  image_ops.h  jpegli_test.cc  memory_manager_internal.cc  memory_manager_internal.h  metrics.cc  metrics.h  mmap.cc  mmap.h  packed_image.cc  packed_image.h  packed_image_convert.cc  packed_image_convert.h  simd_util.cc  simd_util.h  (+14 more)
lib/jpegli/: adaptive_quantization.cc  adaptive_quantization.h  bit_writer.cc  bit_writer.h  bitstream.cc  bitstream.h  color_quantize.cc  color_quantize.h  color_transform.cc  color_transform.h  common.cc  common.h  common_internal.h  dct-inl.h  decode.cc  decode.h  decode_api_test.cc  decode_internal.h  decode_marker.cc  decode_marker.h  decode_scan.cc  decode_scan.h  destination_manager.cc  downsample.cc  downsample.h  encode.cc  encode.h  encode_api_test.cc  encode_finish.cc  encode_finish.h  encode_internal.h  encode_streaming.cc  encode_streaming.h  entropy_coding-inl.h  entropy_coding.cc  entropy_coding.h  error.cc  error.h  error_handling_test.cc  fuzztest.h  (+34 more)
lib/jxl/: ac_context.h  ac_strategy.cc  ac_strategy.h  ac_strategy_test.cc  alpha.cc  alpha.h  alpha_test.cc  ans_common.cc  ans_common.h  ans_common_test.cc  ans_params.h  ans_test.cc  bit_reader_test.cc  bits_test.cc  blending.cc  blending.h  blending_test.cc  box_content_decoder.cc  box_content_decoder.h  byte_order_test.cc  cache_aligned.cc  chroma_from_luma.cc  chroma_from_luma.h  codec_in_out.h  coeff_order.cc  coeff_order.h  coeff_order_fwd.h  coeff_order_test.cc  color_encoding_internal.cc  color_encoding_internal.h  color_encoding_internal_test.cc  color_management_test.cc  common.h  compressed_dc.cc  compressed_dc.h  convolve-inl.h  convolve.h  convolve_separable5.cc  convolve_slow.cc  convolve_symmetric3.cc  (+236 more)
lib/threads/: lib.version  libjpegli_threads.pc.in  libjxl_threads.pc.in  osx.syms  resizable_parallel_runner.cc  test_utils.h  thread_parallel_runner.cc  thread_parallel_runner.h  thread_parallel_runner_cxx.h  thread_parallel_runner_internal.cc  thread_parallel_runner_internal.h  thread_parallel_runner_test.cc
tools/: CMakeLists.txt  args.h  butteraugli_main.cc  cjpegli.cc  cjxl_fuzzer.cc  cjxl_main.cc  cmdline.cc  cmdline.h  codec_config.cc  codec_config.h  color_encoding_fuzzer.cc  decode_and_encode.cc  decode_basic_info_fuzzer.cc  demo_vardct_select.sh  djpegli.cc  djxl_fuzzer.cc  djxl_fuzzer_corpus.cc  djxl_fuzzer_test.cc  djxl_main.cc  fields_fuzzer.cc  file_io.h  fuzzer_stub.cc  gauss_blur.cc  gauss_blur.h  gauss_blur_gbench.cc  gauss_blur_test.cc  git_version.cmake  icc_codec_fuzzer.cc  icc_simplify.cc  jpegli_dec_fuzzer.cc  jpegli_dec_fuzzer_corpus.cc  jxl_from_tree.cc  jxlinfo.c  libjxl_test.c  no_memory_manager.cc  no_memory_manager.h  rans_fuzzer.cc  set_from_bytes_fuzzer.cc  speed_stats.cc  speed_stats.h  (+14 more)
tools/benchmark/: benchmark_args.cc  benchmark_args.h  benchmark_codec.cc  benchmark_codec.h  benchmark_codec_avif.cc  benchmark_codec_avif.h  benchmark_codec_custom.cc  benchmark_codec_custom.h  benchmark_codec_jpeg.cc  benchmark_codec_jpeg.h  benchmark_codec_jxl.cc  benchmark_codec_jxl.h  benchmark_codec_png.cc  benchmark_codec_png.h  benchmark_codec_webp.cc  benchmark_codec_webp.h  benchmark_file_io.cc  benchmark_file_io.h  benchmark_stats.cc  benchmark_stats.h  benchmark_utils.cc  benchmark_utils.h  benchmark_xl.cc
tools/comparison_viewer/: CMakeLists.txt  codec_comparison_window.cc  codec_comparison_window.h  compare_codecs.cc  compare_images.cc  image_loading.cc  image_loading.h  settings.cc  settings.h  split_image_renderer.cc  split_image_renderer.h  split_image_view.cc  split_image_view.h
tools/conformance/: CMakeLists.txt  conformance.py  generator.py  lcms2.py  tooling_test.sh
tools/fast_lossless/: build-android.sh  build.sh  cross_compile_aarch64.sh  fast_lossless_main.cc  pam-input.h
tools/flicker_test/: CMakeLists.txt  main.cc  parameters.cc  parameters.h  setup.cc  setup.h  split_view.cc  split_view.h  (+2 more)
(+299 files in other folders)
